added userprofile, public profile , header, fix login and sign up logo

--- a/src/Login.css
+++ b/src/Login.css
@@ -102,7 +102,7 @@ body {
     margin: 20px 0;
   }
   
-  .logo-image {
+  .logo-image-login {
     width: 100px; /* Adjust the width as needed */
     height: auto;
     margin-bottom: 20px;
