--- a/src/Login.css
+++ b/src/Login.css
@@ -36,7 +36,7 @@ body {
   .login-button {
     width: calc(100% - 20px);
     padding: 10px;
-    background-color: #007bff;
+    background-color: #8dc2fa;
     color: white;
     border: none;
     border-radius: 4px;
