adding icons and fixing warning usage of <a>

--- a/src/Login.css
+++ b/src/Login.css
@@ -66,15 +66,9 @@ body {
     margin: 0 5px;
     cursor: pointer;
   }
-  
-  .facebook {
-    background-color: #3b5998;
-    color: white;
-  }
-  
+
   .google {
-    background-color: #db4437;
-    color: white;
+    margin-left: 2vh;
   }
   
   .signup-link {
