--- a/src/EventPage.css
+++ b/src/EventPage.css
@@ -185,3 +185,40 @@ body, html {
 .guests-table tr:hover, .tasks-table tr:hover {
     background-color: #f1f1f1;
 }
+
+.edit-details-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .edit-details-form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    color: #333;
+  }
+  
+  .edit-details-form input,
+  .edit-details-form select,
+  .edit-details-form textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+  }
+  
+  .edit-details-form textarea {
+    grid-column: span 2; /* Make the textarea span both columns */
+  }
+  
+  .button-group {
+    grid-column: span 2; /* Make the button group span both columns */
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+  }
+  
