--- a/src/Login.css
+++ b/src/Login.css
@@ -45,15 +45,13 @@ body {
   }
   
   .forgot-password {
-    display: block;
-    text-align: center;
-    margin-top: 10px;
-    color: black;
-    text-decoration: none;
-    background-color: #8dc2fa;
-    border-color: #8dc2fa;
-    box-sizing: border-box;
-    border-radius: 4px;
+      display: relative;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      color: #007bff;
+      background-color: white;
+      border: none;
+      cursor: pointer;
   }
   
   .social-login {
