fixing cancel button pop up contact form

--- a/src/PublicProfile.css
+++ b/src/PublicProfile.css
@@ -135,7 +135,7 @@ body {
   justify-content: space-between;
 }
 
-.cancel-button {
+.cancel-button-contact {
   background-color: #dc3545;
   color: white;
   border: none;
